Fix message overflow in SIWE View (#219)

--- a/src/ui/pages/SignInWithEthereum/SpeechBubble/styles.module.css
+++ b/src/ui/pages/SignInWithEthereum/SpeechBubble/styles.module.css
@@ -3,6 +3,8 @@
   padding: 16px;
   border-radius: 8px;
   background-color: var(--neutral-100);
+  overflow: auto;
+  word-break: break-word;
 }
 
 .angle {
